--- a/0310.html
+++ b/0310.html
@@ -7,6 +7,30 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="img">
+    <img src="./202212008462_206.jpg" alt="">
+  </div>
+
+  <input type="button" onclick="openPopup()" value="팝업창 열기"><br>
+  아이디 : <input type="text" placeholder="아이디를 입력하세요"><button type="submit">중복확인</button>
+
+  <p>비밀번호 : <input type="password"></p>
+  <p>비밀번호 확인 : <input type="password"></p>
+  이메일 : <input type="email"> @ <select name="" id="">
+    <option value="">선택</option>
+    <option value="">naver.com</option>
+    <option value="">gogle.com</option>
+    <option value="">daum.net</option>
+  </select> <br>
+
+  <table>
+    <input type="radio">야구
+    <input type="radio">농구
+    <input type="radio">축구<br>
+    <input type="radio">탁구
+    <input type="radio">기타 <input type="text">
+  </table>
   
+  <script src="./java.js"></script>
 </body>
 </html>
