--- a/fetch.html
+++ b/fetch.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>fetch-test</title>
+  <style>
+    .changeRed {
+      background-color: red;
+    }
+    .changeYellow {
+      background-color: yellow;
+    }
+  </style>
 </head>
 <body>
   <h1>Users</h1>
